# memonitor

./: .gitignore  CMakeLists.txt  partitions.csv  setup_credentials.py
main/: CMakeLists.txt
main/include/: camera_manager.h  config.h  credentials_manager.h  firebase_manager.h  pin_config.h  wifi_manager.h
main/src/: camera_manager.c  credentials_manager.c  firebase_manager.c  main.c  wifi_manager.c
